[metadata]
name = all_scraper
version = 1.0.0
description = Scraper all social networks such as: LinkedIn, TikTok, Instagram, Facebook...
long_description = file: README.md
long_description_content_type = text/markdown
author = Andryerics
author_email = andryerics@gmail.com
url = https://github.com/Andryerics/all_scraper
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    httpx
    loguru
    httpx[http2]
    parsel
    lxml
    
